fixed various responsive layout bugs

--- a/css/main.scss
+++ b/css/main.scss
@@ -12,10 +12,26 @@
     background-position: center top;
     color: white;
 
-    text-shadow: 1px 1px 2px black;
-
     h1 {
-       text-shadow: 2px 2px 4px black;
+      font-size: 5em;
+      text-shadow: 2px 2px 4px black;
+    }
+
+    h2 {
+      font-size: 3em;
+      text-shadow: 1px 1px 2px black;
+    }
+
+    @include media-breakpoint-only(xs) {
+      h1 {
+        font-size: 4em;
+        text-shadow: 2px 2px 4px black;
+      }
+
+      h2 {
+        font-size: 2.5em;
+        text-shadow: 1px 1px 2px black;
+      }
     }
 }
 
